# polysolve

./: LICENSE  README.md  pyproject.toml
.github/workflows/: static.yml
docs/source/: conf.py  index.rst  usage.rst
docs/source/api/: modules.rst  plyslv.rst
plyslv/: __init__.py  solver.py
tests/: test_quadratic.py
